Updated index.html and Heatmaps.js

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
   <!-- Project JavaScript -->
   <script type="text/javascript" src="static/js/logic.js"></script>
   
+
+  <!-- Project Map Testing Script -->
+  <script type="text/javascript" src="static/js/heatmap.js"></script>
+
   <!-- If we need to add further scripts, we can put them here -->
 
 </body>
