--- a/index.html
+++ b/index.html
@@ -8,42 +8,33 @@
   <title>Nobel Prize Winners 1901-2023</title>
 
   <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin="" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
   <!-- Call for Main CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
+
 </head>
 
 <body>
 
   <!-- Div for the map -->
   <div id="map"></div>
+    
+  <!-- D3 Library Script -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 
-  <!-- Leaflet Library Script-->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""></script>
+  <!-- Project Map Testing Script -->
+  <script type="text/javascript" src="static/js/heatmaps.js"></script>
   
   <!-- Plotly Script -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   
-  <!-- D3 Library Script -->
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-
   <!-- Vizzu Plugin Script-->
   <script src="https://cdn.jsdelivr.net/npm/vizzu@0.9.2/dist/vizzu.min.js"></script>
-
+    
   <!-- Project JavaScript -->
   <script type="text/javascript" src="static/js/logic.js"></script>
-  
-
-  <!-- Project Map Testing Script -->
-  <script type="text/javascript" src="static/js/heatmap.js"></script>
-
-  <!-- If we need to add further scripts, we can put them here -->
-
 </body>
 
 </html>
