Updating htmls, css, and the img folder
Created the Dashboard and supporting files.

--- a/heatmaps.html
+++ b/heatmaps.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.1/dist/MarkerCluster.Default.css" />
 
   <!-- Call for Main CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="static/css/map.css">
 </head>
 
 <body>
