--- a/index-AR.html
+++ b/index-AR.html
@@ -21,27 +21,27 @@
       </div>
     </div>
 
-    <div class="col-md-5">
-      <h6>Gender:</h6>
-      <select id="selDataset1">
-      <option value="AllDataset">All</option>
-      <option value="MenDataset">Men</option>
-      <option value="WomenDataset">Women</option>
+    <br>
+
+    <div class="well">
+      <h6>Select Prize:</h6>
+      <select id="selectDataset"> 
+        <option value="AllPrizeDataset">All Nobel Prizes</option>
+        <option value="ChemistryDataset">Chemistry Prize</option>
+        <option value="EconomicDataset">Economic Science Prize</option>
+        <option value="LiteratureDataset">Literature Prize</option>
+        <option value="MedicineDataset">Medicine Prize</option>
+        <option value="PeaceDataset">Peace Prize</option>
+        <option value="PhysicsDataset">Physics Prize</option>
       </select>
     </div>
 
-    <br>
-
-
   <div id="plot"></div>
-
-  <div id="plot2"></div>
 
   </div>
 
-  <script src="nobel.js"></script>
-  <script src="nobeldata.js"></script>
-  <script src="app.js"></script>
+  <script src="/data/data.js"></script>
+  <script src="/code/app.js"></script>
 
 </body>
 
